--- a/src/styles/AboutUsSection.css
+++ b/src/styles/AboutUsSection.css
@@ -1,39 +1,54 @@
-/* AboutUsSection.css */
 .about-us-section {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: linear-gradient(to bottom, #1cb5e0, #000046);
-    padding: 50px;
-    color: white; /* Ensure the text is white for contrast */
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(to bottom, #1cb5e0, #000046);
+  padding: 50px;
+  color: white;
+  position: relative;
+}
+
+.saturn-canvas {
+  position: absolute;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.about-us-content {
+  max-width: 800px;
+  text-align: center;
+  animation: fadeInUp 2s ease-out;
+  z-index: 1;
+  font-size: 1.5em;
+  padding: 20px;
+}
+
+.about-us-content h2 {
+  font-size: 3em;
+  margin-bottom: 30px;
+}
+
+.about-us-content p {
+  font-size: 1.5em;
+  line-height: 1.8;
+}
+
+.typing-animation {
+  font-size: 1.5em;
+  line-height: 1.8;
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
   }
-  
-  .about-us-content {
-    max-width: 800px;
-    text-align: center;
-    animation: fadeInUp 2s ease-out;
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
-  
-  .about-us-content h2 {
-    font-size: 2.5em;
-    margin-bottom: 20px;
-  }
-  
-  .about-us-content p {
-    font-size: 1.2em;
-    line-height: 1.6;
-  }
-  
-  @keyframes fadeInUp {
-    from {
-      opacity: 0;
-      transform: translateY(50px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-  
+}
